<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_50sdp"
            android:src="@drawable/ic_dialog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_login_instruction"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:background="@drawable/editext_background"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle">

            <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.20"
                android:visibility="visible"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showFullName="false"
                app:ccp_showNameCode="false"
                app:ccp_showPhoneCode="false"
                app:ccp_textSize="15sp" />

            <LinearLayout
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="@color/blue_dark" />

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="0.80"
                android:background="@android:color/transparent"
                android:gravity="start|center_vertical"
                android:hint="@string/hint_phone_number"
                android:inputType="phone"
                android:padding="10dp"
                android:textSize="15sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txtWait"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/txt_wait_login"
            android:padding="@dimen/_5sdp"
            android:visibility="gone"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:background="@color/blue_dark"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/txtWait" />

        <TextView
            android:id="@+id/txtLoginsProblem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/txt_login_problem"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>