<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background_app">

            <include
                android:id="@+id/header"
                layout="@layout/node_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/txt_client_register"
                android:textColor="@color/black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="italic"
                android:theme="@style/TextStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_hint_name"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLyLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLyName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_hint_lastname"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLyAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLyLastName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edt_hint_age"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInputLyBirthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtInputLyAge">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtBirthdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:hint="@string/edt_hint_birthday"
                    android:inputType="date" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnRegisterClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green"
                android:text="@string/btn_register"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="@dimen/_200sdp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="vertical">

            <include
                android:id="@+id/nodeDrawer"
                layout="@layout/drawer_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.drawerlayout.widget.DrawerLayout>

</layout>